Modal elements visibility fix

--- a/src/webFileSharingSystem.Web/Client/src/app/app.component.scss
+++ b/src/webFileSharingSystem.Web/Client/src/app/app.component.scss
@@ -13,7 +13,7 @@ body {
 }
 
 .footer {
-  z-index: 1500;
+  z-index: 1001;
   box-shadow: inset 0 1px 0 rgba(0, 0, 0, .1);
   font-size: 1rem;
 }
